// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`submitAnonymousVote emits error when not registered 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Du er ikke registert",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitAnonymousVote emits error when trying to vote with canVote false 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Du er ikke stemmeberettiget",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitAnonymousVote emits error with insufficient permissions 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Brukeren har ikke riktig rettigheter",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitAnonymousVote emits vote 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "_id": "0",
        "alternative": "1",
        "question": "1",
        "randomName": null,
        "user": "1",
      },
      "type": "ADD_VOTE",
    },
  ],
  Array [
    "action",
    Object {
      "data": Object {
        "alternativeId": "1",
        "issueId": "1",
      },
      "type": "USER_VOTE",
    },
  ],
]
`;

exports[`submitRegularVote broadcasts vote 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "_id": "0",
        "alternative": "1",
        "question": "1",
        "randomName": null,
        "user": "123",
      },
      "type": "ADD_VOTE",
    },
  ],
]
`;

exports[`submitRegularVote emits error when issue fetching fails 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Noe gikk galt. Vennligst prøv igjen.",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitRegularVote emits error when not registered 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Du er ikke registert",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitRegularVote emits error when tring to vote on issue when voting has ended 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Votering for denne saken har blitt avsluttet.",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitRegularVote emits error when tring to vote on issue when voting hasn't started 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Votering for denne saken har ikke startet enda.",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitRegularVote emits error when trying to vote on inactive issue 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Saken du stemte på er ikke lenger aktiv",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitRegularVote emits error when trying to vote on non-existing alternative 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Alternativet du stemte på finnes ikke",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitRegularVote emits error when trying to vote twice 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Du har allerede stemt.",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitRegularVote emits error when trying to vote with canVote false 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Du er ikke stemmeberettiget",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitRegularVote emits error with insufficient permissions 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Brukeren har ikke riktig rettigheter",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitRegularVote emits vote 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "_id": "0",
        "alternative": "1",
        "question": "1",
        "randomName": null,
        "user": "123",
      },
      "type": "ADD_VOTE",
    },
  ],
  Array [
    "action",
    Object {
      "data": Object {
        "alternativeId": "1",
        "issueId": "1",
      },
      "type": "USER_VOTE",
    },
  ],
]
`;
